discussion/kv_engine/177001/177001_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move throttle_test to its own test suite

Change-Id: Ic55623bb6a5c7fd4e7ab87fb391d1c9cb1e29057

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 06:16:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 07:26:24.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18511/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:23:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    std::vector<std::thread> threads;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:30: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::vector<std::thread> threads;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:61:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
                std::thread{[func, name = "bucket-" + std::to_string(ii)]() {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18511/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18511/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8182/ : FAILURE

Compile error at [2022-07-03T06:27:03.771Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8182/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21383/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [25/93]: test producer disk backfill buffer limits...Exceeded maximum wait time of 60000000us waiting for stat "ep_items_rm_from_checkpoints" to be greater or equal than 3 (last value:0) - aborting.
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21383/ )

ThreadSanitizer issue: data race /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats_tasks.cc:33 in StatsTaskBucketStats::run()  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21383/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17664/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47276/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39723/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20395/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20743/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28776/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8281/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19617/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
